--- a/2.3 Void Elements/solution.html
+++ b/2.3 Void Elements/solution.html
@@ -11,7 +11,8 @@ UK<br />
 
 <p>William Blake (28 November 1757 – 12 August 1827) was an English poet, painter, and printmaker. Largely unrecognised
 during his life, Blake is now considered a seminal figure in the history of the poetry and visual art of the Romantic
-Age. What he called his "prophetic works" were said by 20th-century critic Northrop Frye to form "what is in proportion
+Age. What he called hi
+s "prophetic works" were said by 20th-century critic Northrop Frye to form "what is in proportion
 to its merits the least read body of poetry in the English language".[2] His visual artistry led 21st-century critic
 Jonathan Jones to proclaim him "far and away the greatest artist Britain has ever produced".[3] In 2002, Blake was
 placed at number 38 in the BBC's poll of the 100 Greatest Britons.[4] While he lived in London his entire life, except
