more projects added- HTML, Multi-page websites, and CSS

--- a/3.4 Birthday Invite Project/solution.html
+++ b/3.4 Birthday Invite Project/solution.html
@@ -1,15 +1,15 @@
 <!-- This is one possible solution -->
 <h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
+<h2>On the 1th October</h2>
 
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
   alt="purple birthday cake with candles" />
 
 <h3>What to bring:</h3>
 <ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
+  <li>Positive vibes (It's a must, Although you can get it there)</li>
+  <li>Healthy Cake (I like a healthy lifestyle)</li>
+  <li>An appetite (There will be lots of tasty food)</li>
 </ul>
 
 <h3>This is where you need to go:</h3>
