added CSS Flexbox Layout projects

--- a/8.0 CSS Display/solution1.html
+++ b/8.0 CSS Display/solution1.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<!-- 
+  TODO
+1. By changing only the display property of the CSS make all 3 squares line up horizontally like in goal1 image.
+-->
+
 <head>
   <title>CSS Display Property Example</title>
   <style>
