--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -21,16 +21,24 @@
 
     .cat {
       background-color: aquamarine;
+      float: left;
     }
 
     .dog {
       background-color: coral;
-    }
+      float: right;
+     }
+
+     img {
+      float: left;
+     }
 
     footer {
       text-align: center;
       background-color: blueviolet;
+      clear: both;
     }
+
   </style>
 </head>
 
