--- a/8.2 Responsiveness/bootstrap.html
+++ b/8.2 Responsiveness/bootstrap.html
@@ -9,10 +9,17 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
+<!-- bootstrap framework is external framework that defined banch of classes in their css, predefined layers, 
+  like- container, row, card etc. They also have predefined classes for responsiveness.
+  It is 12 column grid system.
+  -->
 <body>
   <h1>Bootstrap Framework</h1>
   <div class="container">
     <div class="row">
+      <!--takes 6 out of 12 columns-->
+      <!--as we resize the website its still takes out 50% of the width
+      -->
       <div class="card col-6">
         Card
       </div>
