--- a/8.2 Responsiveness/grid.html
+++ b/8.2 Responsiveness/grid.html
@@ -5,14 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Grid</title>
+
+<!--
+CSS Grid- 
+XXXXX
+XX XX
+XX XX
+-->
   <style>
     .grid-container {
       display: grid;
+      /*2 equal size columns. Fr is a fractional unit and 1fr is for 1 part of the available space*/
       grid-template-columns: 1fr 1fr;
+      /*3 rows in the grid. each number symbolize the heigth of the row*/
       grid-template-rows: 100px 200px 200px;
       gap: 30px;
     }
 
+    /*the first div with the tag "first", will have 2 column*/
     .first {
       grid-column: span 2;
     }
@@ -21,7 +31,9 @@
       background-color: blue;
     }
   </style>
+
 </head>
+
 
 <body>
   <h1>CSS Grid</h1>
