--- a/8.4 Web Design Agency Project/index.html
+++ b/8.4 Web Design Agency Project/index.html
@@ -14,8 +14,12 @@
 <body>
   <div class="main">
     <img class="logo" src="./assets/images/logo.png" alt="logo">
-    <h1>We are a Creative Design Agency</h1>
-    <div class="left card"><img class="tile-image" src="./assets/images/beautiful.jpg" alt="hand and flower in water">
+    <!--span to approach 1 word-->
+    <h1>We are a <span class="creative">Creative</span> </br> Design Agency</h1>
+
+    <!--2 class names-->
+    <div class="left card">
+      <img class="tile-image" src="./assets/images/beautiful.jpg" alt="hand and flower in water">
       <h2 class="card-title">Beauty</h2>
       <p class="card-text">We strive to create the most beautiful websites for all your needs. Working closely with you
         to
@@ -23,7 +27,8 @@
         develop an amazing website for your business.</p>
     </div>
 
-    <div class="right card"><img class="tile-image" src="./assets/images/construction.jpg" alt="metal structure">
+    <div class="right card">
+      <img class="tile-image" src="./assets/images/construction.jpg" alt="metal structure">
       <h2 class="card-title">Construction</h2>
       <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from
         scratch using HTML and CSS. Only the best for you.</p>
