--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -6,42 +6,127 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
-  <style>
+ 
+<!--Flex Sizing -->
+<!--
+The common one:
+flex: 1 1 0; /= flex-grow:1; flex-shrink:1; flex-basis:0;/ /= flex:1;
+it means a grow factor of 1, a shrink factor of 1, and a basis of 0, to keep everything equal.
+
+
+flex: 1 1 1; /= flex-grow:1; flex-shrink:1; flex-basis:1;/
+flex: 1 1 auto; /= flex-grow:1; flex-shrink:1; flex-basis:auto;/
+flex: 1 1; /= flex-grow:1; flex-shrink:1; flex-basis:0;/
+flex: 1; /= flex-grow:1; flex-shrink:1; flex-basis:auto;/
+flex: auto; /= flex-grow:1; flex-shrink:1; flex-basis:auto;/
+-->
+
+ <style>
     body {
       font-family: 'Sono', sans-serif;
     }
 
-    /* Hint: What can you do with a media query and flexbox? */
-    @media (max-width: 1250px) {
-      
+    /* CSS for all the container */
+    .pricing-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        gap: 2rem;        
+      }
+
+     /* CSS for each container */
+    .pricing-plan{
+      flex: 1;
+      max-width: 400px;
+      padding: 20px;
+      background-color: #f2f2f2;
+      border-radius: 5px;
+      text-align: center;
     }
+
+
+    /* CSS for the title */
+    .plan-title{
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    
+    /* CSS for the price */
+    .plan-price{
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    /* CSS for the whole list */
+    .plan-features { 
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      }
+
+    /* CSS for each list items */
+    .plan-features li {
+      margin-bottom: 20px;
+    }
+
+    .plan-button{
+      padding: 10px;
+      background-color: #ff6600;
+      color: #fff;
+      border-radius: 5px;
+      border: none;
+    }
+
+
+    /* CSS for screens below or equal to 1250px wide */
+    @media (max-width: 1250px) {
+      .pricing-container {
+        flex-direction: column;
+        height: 100%;
+      }
+    }
+
+
   </style>
 </head>
 
 <body>
   <div class="pricing-container">
+
     <div class="pricing-plan">
       <div class="plan-title">Basic</div>
+
       <div class="plan-price">$9.99/month</div>
       <ul class="plan-features">
         <li>✅ 10GB Storage</li>
         <li>✅ 1 User</li>
         <li>🚫 Support</li>
       </ul>
+
       <button class="plan-button">Sign Up</a>
     </div>
+
+
     <div class="pricing-plan">
       <div class="plan-title">Standard</div>
+
       <div class="plan-price">$19.99/month</div>
       <ul class="plan-features">
         <li>✅ 50GB Storage</li>
         <li>✅ 5 Users</li>
         <li>✅ Phone &amp; Email Support</li>
       </ul>
+
       <button class="plan-button">Sign Up</a>
     </div>
+
+
     <div class="pricing-plan">
       <div class="plan-title">Premium</div>
+
       <div class="plan-price">$49.99/month</div>
       <ul class="plan-features">
         <li>✅ 100GB Storage</li>
@@ -50,8 +135,8 @@
       </ul>
       <button class="plan-button">Sign Up</a>
     </div>
+
+  
   </div>
-
 </body>
-
 </html>
