--- a/10.1 Grid Sizing/auto-size.html
+++ b/10.1 Grid Sizing/auto-size.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auto Size Grid</title>
+
   <style>
+    /* auto  */
     .grid-container {
-      display: grid;
+      display: grid;    /* create a grid container (set to 100% size) */
+  /* Define the grid rows */
+  /* The first row is set to a fixed height of 100 pixels */
+  /* The second row takes up the remaining vertical space ('auto', meaning it will fit the content in there, to 100%, extendable) */
       grid-template-rows: 100px auto;
+  /* Define the grid columns */
+  /* The first column is set to a fixed width of 200 pixels */
+  /* The second column takes up the remaining horizontal space */
       grid-template-columns: 200px auto;
     }
 
