--- a/10.1 Grid Sizing/fractional-size.html
+++ b/10.1 Grid Sizing/fractional-size.html
@@ -9,7 +9,8 @@
 
     .grid-container {
       display: grid;
-      grid-template-rows: 1fr 2fr;
+      /*ratios*/
+      grid-template-rows: 1fr 2fr;    /* first row is half the size the second row */
       grid-template-columns: 1fr 2fr;
     }
 
