--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -5,16 +5,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap</title>
-  <!-- TODO 1: Add the Bootstrap link here. -->
+  <!-- TODO 1: Bootstrap link. -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
   <style>
-    /* TODO 4: Use flexbox to center the card in the vertical and horizontal center. */
+    /* TODO 4: flexbox is used to center the card in the vertical and horizontal center. */
+    .flex-container {
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 
 <body>
   <div class="flex-container">
-    <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
-    <!-- TODO 3: Change the image src to display the flower.jpg image. -->
+    <!-- TODO 2: Bootstrap Prebuilt Card -->
+    <div class="card" style="width: 18rem;">
+          <!-- TODO 3: image src set to display the flower.jpg image. -->
+      <img src="./flower.jpg" class="card-img-top" alt="sunflower">
+      <!-- Prebuilt Card body -->
+      <div class="card-body">
+              <!-- Prebuilt Card title -->
+        <h5 class="card-title">Card title</h5>
+              <!-- Prebuilt Card text -->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.
+        </p>
+        <!-- Bootstrap Prebuilt Button -->
+        <!--
+        <"button"(button html element) class="btn"(for bootstrap button) "btn-primary"(adding the class for color scheme)
+        <button type="button" class="btn btn-primary">Primary</button>
+        -->
+
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
   </div>
 </body>
 
