--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -58,7 +58,8 @@
         <div class="col d-flex align-items-start">
           <div
              class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                      <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-check2-circle"
+             <!-- make the heigth:30 -->        
+             <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-check2-circle"
                         viewBox="0 0 16 16">
                         <path
                           d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z" />
