added the Simon Game- JQuery

--- a/Simon Game Challenge Starting Files/index.html
+++ b/Simon Game Challenge Starting Files/index.html
@@ -1,3 +1,5 @@
+<!-- Work Plan For Developing A Game -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -35,6 +37,7 @@
 
   </div>
 
+  <!-- 1. js + JQuery links -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
 
