--- a/Backend/3.4 Middleware/public/index.html
+++ b/Backend/3.4 Middleware/public/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>Band Name Generator</h1>
+  <!-- Frontend sends a request to the server (POST)-->
   <form action="/submit" method="POST">
     <label for="street">Street Name:</label>
     <input type="text" name="street" required>
