--- a/Frontend/11.6 Drum Kit/index.html
+++ b/Frontend/11.6 Drum Kit/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
     <button class="w drum">w</button>
@@ -22,13 +21,10 @@
   </div>
 
 
-  <script src="index.js" charset="utf-8"></script>
+<script src="index.js" charset="utf-8"></script>
+
+<footer>
+  Made with ❤️ in London.
+</footer>
 </body>
-  
-
-  <footer>
-    Made with ❤️ by Shani Bider.
-  </footer>
-
-
 </html>
